# NETMIKO-WEBSITE

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  automation.py  inventory.json  plan.md  profile.json  users.json
labpanel/: __init__.py  extensions.py  routes.py
logs/: activity_device-tidak-ada.json  activity_r1.json  activity_r2.json  activity_r3.json  activity_r4.json  activity_r5.json
netmiko/: .gitignore  CONTRIBUTING.md  PLATFORMS.md  README.md  _release.sh  pyproject.toml  tests.sh
netmiko/.github/ISSUE_TEMPLATE/: new_platform_request.yml
netmiko/.github/workflows/: main_testing.yaml
netmiko/examples/: send_command_ttp.py  term_server.py
netmiko/examples_old/case16_concurrency/: processes_netmiko.py  processes_netmiko_queue.py
netmiko/netmiko/: __init__.py  base_connection.py  snmp_autodetect.py
netmiko/netmiko/cisco/: cisco_ftd_ssh.py
netmiko/tests/: conftest.py  network_utilities.py  test_netmiko_cmd_verify.py  test_netmiko_commit.py  test_netmiko_config.py  test_netmiko_session_log.py  test_netmiko_show.py  test_timeout_read_timing.py  test_timeout_read_until_pattern.py  test_timeout_send_command.py  test_timeout_send_command_timing.py  test_utils.py
netmiko/tests/etc/: commands.yml.example  responses.yml.example  test_devices.yml.example
netmiko/tests/performance/: gen_scrapli_graph.py  test_netmiko.py
netmiko/tests/unit/: conftest.py  test_clitools_helpers.py  test_clitools_outputters.py  test_session_log.py  test_ssh_autodetect.py  test_utilities.py
static/: styles.css
templates/: 403.html  admin_users.html  base.html  batch.html  dashboard.html  device.html  device_info.html  devices.html  login.html  profile.html  terminal.html
