[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "netmiko"
version = "4.6.1"
description = "Multi-vendor library to simplify legacy CLI connections to network devices"
authors = ["Kirk Byers <ktbyers@twb-tech.com>"]
license = "MIT"
readme = "README.md"
include = [
    "netmiko/py.typed",
    "LICENSE"
]
repository = "https://github.com/ktbyers/netmiko"
classifiers = [
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
paramiko = ">=3.5.0"
scp = ">=0.13.6"
pyyaml = ">=6.0.2"
textfsm = ">=1.1.3"
ntc-templates = ">=3.1.0"
pyserial = ">=3.3"
rich = ">=13.8"
"ruamel.yaml" = ">=0.17"

[tool.poetry.group.dev.dependencies]
ruff = "0.15.5"
mypy = "1.19.1"
mypy-extensions = "1.0.0"
pytest = "8.3.3"
twine = "6.2.0"
docutils = "0.22.4"
# genie (parsers group) requires exactly pysnmp 6.1.4 (latest 6.1.x, disallows >=6.2)
# pysnmp 7.x is excluded as it is a completely different async library incompatible with Netmiko
pysnmp = ">=6.1.4,<7"
pdoc3 = "0.11.6"
types-paramiko = "4.0.0.20250822"
types-PyYAML = "6.0.12.20250915"

[tool.poetry.group.parsers]
optional = true

[tool.poetry.group.parsers.dependencies]
pyats = ">=26.2"
genie = ">=26.2"
ttp = ">=0.9.5"

[tool.poetry.scripts]
"netmiko-grep" = "netmiko.cli_tools.netmiko_grep:main_ep"
"netmiko-show" = "netmiko.cli_tools.netmiko_show:main_ep"
"netmiko-cfg" = "netmiko.cli_tools.netmiko_cfg:main_ep"
"netmiko-encrypt" = "netmiko.cli_tools.netmiko_encrypt:main_ep"
"netmiko-bulk-encrypt" = "netmiko.cli_tools.netmiko_bulk_encrypt:main_ep"

[tool.ruff]
line-length = 100

# Specify your floor Python version (i.e. minimum version Netmiko supports) 
target-version = "py310"

# Files or directories to exclude from linting and formatting
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "netmiko/_telnetlib",
]

[tool.ruff.lint]
# Enable these rule sets for a modern, clean codebase
# E/W = pycodestyle, F = Pyflakes, I = isort, UP = pyupgrade, B = bugbear
# select = ["E", "F", "W", "I", "UP", "B"]

# If you want to be extra strict about line length in the linter:
# extend-select = ["E501"] 

[tool.ruff.format]
# Matches Black's style but honors the 100 char limit
quote-style = "double"
indent-style = "space"

# Optional: Formats code snippets inside docstrings!
docstring-code-format = true
docstring-code-line-length = 80

[tool.mypy]
python_version = "3.13"
exclude = "telnetlib.py"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true

# Module-specific overrides
[[tool.mypy.overrides]]
module = "netmiko.base_connection"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "netmiko.cli_tools.netmiko_grep",
    "netmiko.cli_tools.netmiko_cfg",
    "netmiko.cli_tools.netmiko_show",
    "netmiko.cli_tools.helpers",
    "netmiko.cli_tools.outputters",
    "netmiko.cli_tools.argument_handling",
    "netmiko.cli_tools.netmiko_encrypt",
    "netmiko.cli_tools.netmiko_bulk_encrypt",
    "netmiko._telnetlib.telnetlib"
]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-rs"
testpaths = ["tests"]
